# python-web-conference2022

./: Makefile  README.md
app/: Dockerfile  pyproject.toml
app/app/: main.py
app/app/tests/: test_api.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  hpa.yaml  scts.yaml
chart/templates/app/: dpl.yaml  ing.yaml  svc.yaml
chart/templates/redis/: dpl.yaml  svc.yaml
ci/: pipelines.yaml  values.yaml
ci/envs/helm3/: Dockerfile
ci/envs/poetry/: Dockerfile
